fix:Modify link jump mode

--- a/app/components/slider/index.scss
+++ b/app/components/slider/index.scss
@@ -40,7 +40,7 @@
         align-items: center;
         margin-bottom: 37px;
         font-size: 16px;
-      
+        color:#fff;
         cursor:pointer;
         img{
             width: 36px;
